# drf123

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
education/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
payments/: models.py  urls.py  views.py
user/: models.py
